# Learning-QML

./: README.md
QmlAnimations/: CMakeLists.txt  ClickableImage.qml  Main.qml  main.cpp
QmlAnimations1/: CMakeLists.txt  Main.qml  main.cpp
QmlBasics/: CMakeLists.txt  Main.qml
QmlBasics1/: CMakeLists.txt  Main.qml  main.cpp
QmlBasics2/: CMakeLists.txt  Main.qml  main.cpp
QmlComponents/: Button.qml  CMakeLists.txt  Main.qml  main.cpp
QmlInputElements/: CMakeLists.txt  DarkSquare.qml  Main.qml  TTextEdit.qml  TextLineEdit.qml  TextLineEditFocus.qml  main.cpp
QmlPositioning/: BlueSquare.qml  CMakeLists.txt  GreenSquare.qml  Main.qml  RedSquare.qml  main.cpp
QmlTransformations/: CMakeLists.txt  ClickableImage.qml  Main.qml  main.cpp
